# python-package

./: README.md  main.py  pyproject.toml
mockpipeline/: main.py
mockpipeline/steps/: archive.py  classify.py  download.py  extract.py  upload.py
steps/: archive.py  classify.py  download.py  extract.py  upload.py
