[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mockpipeline"
version = "0.1.0"
description = "A mock document processing pipeline"
requires-python = ">=3.7"
authors = [
    { name="Yasandu Imanjith", email="yasandu@example.com" }
]

[project.scripts]
mock-project = "mockpipeline.main:main"